--- a/src/main/webapp/pages/Main/page.min.html
+++ b/src/main/webapp/pages/Main/page.min.html
@@ -35,6 +35,11 @@ var _MainPage_Variables_ ={}
         <wm-page-content name="page_content1" columnwidth="12">
             <wm-fileupload name="fileupload1" service="FileService" operation="uploadFile"></wm-fileupload>
             <wm-button class="btn-default" caption="Button" type="button" name="button1"></wm-button>
+            <wm-buttongroup name="buttongroup1">
+                <wm-button class="btn-default" name="button1" caption="left"></wm-button>
+                <wm-button class="btn-default" name="button2" caption="center"></wm-button>
+                <wm-button class="btn-default" name="button3" caption="right"></wm-button>
+            </wm-buttongroup>
         </wm-page-content>
     </wm-content>
 </wm-page>
