--- a/src/main/webapp/pages/Main/Main.html
+++ b/src/main/webapp/pages/Main/Main.html
@@ -4,6 +4,7 @@
     <wm-content name="content1">
         <wm-page-content name="page_content1" columnwidth="12">
             <wm-fileupload name="fileupload1" service="FileService" operation="uploadFile"></wm-fileupload>
+            <wm-button class="btn-default" caption="Button" type="button" name="button1"></wm-button>
         </wm-page-content>
     </wm-content>
 </wm-page>
