--- a/src/main/webapp/pages/Main/page.min.html
+++ b/src/main/webapp/pages/Main/page.min.html
@@ -34,6 +34,7 @@ var _MainPage_Variables_ ={}
     <wm-content name="content1">
         <wm-page-content name="page_content1" columnwidth="12">
             <wm-fileupload name="fileupload1" service="FileService" operation="uploadFile"></wm-fileupload>
+            <wm-button class="btn-default" caption="Button" type="button" name="button1"></wm-button>
         </wm-page-content>
     </wm-content>
 </wm-page>
