--- a/src/main/webapp/pages/Main/page.min.html
+++ b/src/main/webapp/pages/Main/page.min.html
@@ -39,7 +39,8 @@ var _MainPage_Variables_ ={}
                 <wm-button class="btn-default" name="button2" caption="center"></wm-button>
                 <wm-button class="btn-default" name="button3" caption="right"></wm-button>
             </wm-buttongroup>
-            <wm-button class="btn-default" caption="Button" type="button" name="button1"></wm-button>
+            <wm-button class="btn-default" type="button" name="button1" caption="Button"></wm-button>
+            <wm-barcodescanner name="barcodescanner1"></wm-barcodescanner>
         </wm-page-content>
     </wm-content>
 </wm-page>
